--- a/src/ContaCorrente.API/appsettings.json
+++ b/src/ContaCorrente.API/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Server=localhost, 1433;Initial Catalog=CcDb;User ID=sa;Password=xp123!@#"
+    "Default": "Server=localhost, 1433;Initial Catalog=BancoDb;User ID=sa;Password=xp123!@#"
   },
   "AllowedHosts": "*"
 }
